--- a/src/html/views/unsubscribe.html
+++ b/src/html/views/unsubscribe.html
@@ -1,62 +1,62 @@
 <%= _.template(require('./../includes/header.html'))() %>
-<main class="main">
+<main class="main main_overflow">
     <div class="container">
         <div class="content">
+            <h2>Your subscription</h2>
             <div class="row">
-                <div class="col-12 col-lg-6">
-                    <h2 >Your<br>Subscription</h2>
-                </div>
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 ml-auto mr-auto">
                     <form action="">
-                        <div class="form-group form-group_30">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" checked="" id="customCheck1">
-                                <label class="custom-control-label" for="customCheck1">Combinação que consiste em três</label>
-                            </div>
-                        </div>
-                        <div class="form-group form-group_30">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" checked="" id="customCheck2">
-                                <label class="custom-control-label" for="customCheck2">Combinação que consiste em três</label>
-                            </div>
-                        </div>
-                        <div class="form-group form-group_30">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck3">
-                                <label class="custom-control-label" for="customCheck3">Combinação que consiste em três</label>
-                            </div>
-                        </div>
-                        <div class="form-group form-group_30">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" checked="" id="customCheck4">
-                                <label class="custom-control-label" for="customCheck4">Combinação que consiste em três</label>
-                            </div>
-                        </div>
-                        <div class="form-group form-group_30">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck5">
-                                <label class="custom-control-label" for="customCheck5">Combinação que consiste em três</label>
-                            </div>
-                        </div>
-                        <div class="form-group form-group_30">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" checked="" id="customCheck6">
-                                <label class="custom-control-label" for="customCheck6">Combinação que consiste em três</label>
-                            </div>
-                        </div>
-                        <div class="form-group form-group_30">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck7">
-                                <label class="custom-control-label" for="customCheck7">Combinação que consiste em três</label>
+                        <div class="form-group form-group_40">
+                            <div class="custom-control custom-switch custom-switch__sub">
+                                <input type="checkbox" class="custom-control-input" id="customSwitch1">
+                                <label class="custom-control-label" for="customSwitch1">Combinação que consiste em três</label>
                             </div>
                         </div>
                         <div class="form-group form-group_40">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck8">
-                                <label class="custom-control-label" for="customCheck8">Combinação que consiste em três</label>
+                            <div class="custom-control custom-switch custom-switch__sub">
+                                <input type="checkbox" class="custom-control-input" id="customSwitch2">
+                                <label class="custom-control-label" for="customSwitch2">Combinação que consiste em três</label>
                             </div>
                         </div>
-                        <button class="btn btn_w100">Save preferences</button>
+                        <div class="form-group form-group_40">
+                            <div class="custom-control custom-switch custom-switch__sub">
+                                <input type="checkbox" class="custom-control-input" id="customSwitch3">
+                                <label class="custom-control-label" for="customSwitch3">We have created a unique combination system that consists of three main factors</label>
+                            </div>
+                        </div>
+                        <div class="form-group form-group_40">
+                            <div class="custom-control custom-switch custom-switch__sub">
+                                <input type="checkbox" class="custom-control-input" id="customSwitch4">
+                                <label class="custom-control-label" for="customSwitch4">Combinação que consiste em três</label>
+                            </div>
+                        </div>
+                        <div class="form-group form-group_40">
+                            <div class="custom-control custom-switch custom-switch__sub">
+                                <input type="checkbox" class="custom-control-input" id="customSwitch5">
+                                <label class="custom-control-label" for="customSwitch5">Combinação que consiste em três</label>
+                            </div>
+                        </div>
+                        <div class="form-group form-group_40">
+                            <div class="custom-control custom-switch custom-switch__sub">
+                                <input type="checkbox" class="custom-control-input" id="customSwitch6">
+                                <label class="custom-control-label" for="customSwitch6">Combinação que consiste em três</label>
+                            </div>
+                        </div>
+                        <div class="form-group form-group_40">
+                            <div class="custom-control custom-switch custom-switch__sub">
+                                <input type="checkbox" class="custom-control-input" id="customSwitch7">
+                                <label class="custom-control-label" for="customSwitch7">Combinação que consiste em três</label>
+                            </div>
+                        </div>
+                        <div class="form-group form-group_40">
+                            <div class="custom-control custom-switch custom-switch__sub">
+                                <input type="checkbox" class="custom-control-input" id="customSwitch8">
+                                <label class="custom-control-label" for="customSwitch8">We have created a unique combination system that consists of three main factors</label>
+                            </div>
+                        </div>
+                        <div class="form-group form-group_40up">
+                            <button class="btn btn_w100">Save preferences</button>
+                        </div>
                     </form>
                 </div>
             </div>
