--- a/src/html/views/unsubscribe.html
+++ b/src/html/views/unsubscribe.html
@@ -2,63 +2,61 @@
 <main class="main main_overflow">
     <div class="container">
         <div class="content">
-            <h2>Your subscription</h2>
-            <div class="row">
-                <div class="col-12 col-lg-6 ml-auto mr-auto">
-                    <form action="">
-                        <div class="form-group form-group_40">
-                            <div class="custom-control custom-switch custom-switch__sub">
-                                <input type="checkbox" class="custom-control-input" id="customSwitch1">
-                                <label class="custom-control-label" for="customSwitch1">Combinação que consiste em três</label>
-                            </div>
+            <div class="subscription">
+                <h2>Your subscription</h2>
+                <form action="">
+                    <div class="form-group form-group_40">
+                        <div class="custom-control custom-switch custom-switch__sub">
+                            <input type="checkbox" class="custom-control-input" id="customSwitch1">
+                            <label class="custom-control-label" for="customSwitch1">Combinação que consiste em três</label>
                         </div>
-                        <div class="form-group form-group_40">
-                            <div class="custom-control custom-switch custom-switch__sub">
-                                <input type="checkbox" class="custom-control-input" id="customSwitch2">
-                                <label class="custom-control-label" for="customSwitch2">Combinação que consiste em três</label>
-                            </div>
+                    </div>
+                    <div class="form-group form-group_40">
+                        <div class="custom-control custom-switch custom-switch__sub">
+                            <input type="checkbox" class="custom-control-input" id="customSwitch2" checked>
+                            <label class="custom-control-label" for="customSwitch2">Combinação que consiste em três</label>
                         </div>
-                        <div class="form-group form-group_40">
-                            <div class="custom-control custom-switch custom-switch__sub">
-                                <input type="checkbox" class="custom-control-input" id="customSwitch3">
-                                <label class="custom-control-label" for="customSwitch3">We have created a unique combination system that consists of three main factors</label>
-                            </div>
+                    </div>
+                    <div class="form-group form-group_40">
+                        <div class="custom-control custom-switch custom-switch__sub">
+                            <input type="checkbox" class="custom-control-input" id="customSwitch3">
+                            <label class="custom-control-label" for="customSwitch3">We have created a unique combination system that consists of three main factors</label>
                         </div>
-                        <div class="form-group form-group_40">
-                            <div class="custom-control custom-switch custom-switch__sub">
-                                <input type="checkbox" class="custom-control-input" id="customSwitch4">
-                                <label class="custom-control-label" for="customSwitch4">Combinação que consiste em três</label>
-                            </div>
+                    </div>
+                    <div class="form-group form-group_40">
+                        <div class="custom-control custom-switch custom-switch__sub">
+                            <input type="checkbox" class="custom-control-input" id="customSwitch4">
+                            <label class="custom-control-label" for="customSwitch4">Combinação que consiste em três</label>
                         </div>
-                        <div class="form-group form-group_40">
-                            <div class="custom-control custom-switch custom-switch__sub">
-                                <input type="checkbox" class="custom-control-input" id="customSwitch5">
-                                <label class="custom-control-label" for="customSwitch5">Combinação que consiste em três</label>
-                            </div>
+                    </div>
+                    <div class="form-group form-group_40">
+                        <div class="custom-control custom-switch custom-switch__sub">
+                            <input type="checkbox" class="custom-control-input" id="customSwitch5">
+                            <label class="custom-control-label" for="customSwitch5">Combinação que consiste em três</label>
                         </div>
-                        <div class="form-group form-group_40">
-                            <div class="custom-control custom-switch custom-switch__sub">
-                                <input type="checkbox" class="custom-control-input" id="customSwitch6">
-                                <label class="custom-control-label" for="customSwitch6">Combinação que consiste em três</label>
-                            </div>
+                    </div>
+                    <div class="form-group form-group_40">
+                        <div class="custom-control custom-switch custom-switch__sub">
+                            <input type="checkbox" class="custom-control-input" id="customSwitch6" checked>
+                            <label class="custom-control-label" for="customSwitch6">Combinação que consiste em três</label>
                         </div>
-                        <div class="form-group form-group_40">
-                            <div class="custom-control custom-switch custom-switch__sub">
-                                <input type="checkbox" class="custom-control-input" id="customSwitch7">
-                                <label class="custom-control-label" for="customSwitch7">Combinação que consiste em três</label>
-                            </div>
+                    </div>
+                    <div class="form-group form-group_40">
+                        <div class="custom-control custom-switch custom-switch__sub">
+                            <input type="checkbox" class="custom-control-input" id="customSwitch7">
+                            <label class="custom-control-label" for="customSwitch7">Combinação que consiste em três</label>
                         </div>
-                        <div class="form-group form-group_40">
-                            <div class="custom-control custom-switch custom-switch__sub">
-                                <input type="checkbox" class="custom-control-input" id="customSwitch8">
-                                <label class="custom-control-label" for="customSwitch8">We have created a unique combination system that consists of three main factors</label>
-                            </div>
+                    </div>
+                    <div class="form-group form-group_40">
+                        <div class="custom-control custom-switch custom-switch__sub">
+                            <input type="checkbox" class="custom-control-input" id="customSwitch8">
+                            <label class="custom-control-label" for="customSwitch8">We have created a unique combination system that consists of three main factors</label>
                         </div>
-                        <div class="form-group form-group_40up">
-                            <button class="btn btn_w100">Save preferences</button>
-                        </div>
-                    </form>
-                </div>
+                    </div>
+                    <div class="form-group form-group_40up">
+                        <button class="btn btn_w100">Save preferences</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
