--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -28,11 +28,16 @@
   background-position: 50%;
   background-size: cover;
   @media (min-width: 576px) {
-    & {
-      height: 390px;
-      max-height: 390px;
-      max-width: 300px;
-    }
+    height: 390px;
+    max-height: 390px;
+    max-width: 300px;
   }
 }
 
+.subscription {
+  width: 100%;
+  margin: 0 auto;
+  @media (min-width: 576px) {
+    max-width: 505px;
+  }
+}
