settings grid fix

--- a/src/html/views/settings.html
+++ b/src/html/views/settings.html
@@ -1,11 +1,11 @@
 <%= _.template(require('./../includes/header.html'))() %>
 <main class="main">
     <div class="container">
-        <div class="content">
+        <div class="content content_settings">
             <form action="">
                 <h2>Settings</h2>
                 <div class="row">
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-6 pr-lg-0">
                         <div class="settings-photo">
                             <div class="form-group form-group_40">
                                 <div class="profile-photo">
@@ -19,7 +19,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-6 pl-lg-0">
                         <div class="settings-form">
                             <div class="form-group form-group_20">
                                 <input class="form-control" type="text" placeholder="Full Name">
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-6 pr-lg-0">
                         <div class="settings-photo settings-switch">
                             <div class="form-group form-group_40">
                                 <div class="custom-control custom-switch">
@@ -54,7 +54,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-6 pl-lg-0">
                         <div class="settings-form">
                             <div class="form-group form-group_20">
                                 <button class="btn btn_w100">SAVE PREFERENCES</button>
