--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -5,7 +5,7 @@ $logo_main_color:           #FF6699;/**/
 $btn_bg_color:              #FF6699;/**/
 $btn_hover_bg_color:        #E45182;/**/
 $font_color:                #141111;/**/
-$bg_dark_1:                 #010101;
+$bg_dark_1:                 #131313; /**/
 $font_family:               "Gilroy", sans-serif;
 $font_weight:               300;/**/
 $font_size:                 20px;/**/
